--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-315.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇩🇪 德国-490.0KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.77MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-218.8KB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-225.2KB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-545.2KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-5.36MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-915.9KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-673.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-995.4KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-191.7KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-874.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇳🇱 荷兰-402.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇨🇳 中国-4.20MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-330.2KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-676.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇳🇱 荷兰-335.9KB/s(Youtube:不良林), server: 213.183.59.214, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-425.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-490.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-545.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-915.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-673.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-874.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-402.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-335.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-425.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-490.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-545.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-915.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-673.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-874.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-402.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-335.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-425.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-490.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-545.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-915.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-673.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-874.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-402.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-335.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-425.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-490.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-545.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-915.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-673.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-874.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-402.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-335.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-425.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-490.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-545.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-915.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-673.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-874.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-402.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-335.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-425.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-490.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-545.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-915.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-673.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-874.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-402.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-335.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-425.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-315.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-490.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-545.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.36MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-915.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-673.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-995.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-191.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-874.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-402.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.20MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-335.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-425.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
