--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-1.99MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-8.34MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-381.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-300.9KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇷🇺 俄罗斯联邦-993.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 乌克兰-394.2KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇨🇳 中国-5.74MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.72MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 未知国家-1.48MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇯🇵 日本-6.28MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.69MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-328.0KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-330.3KB/s(Youtube:不良林), server: silicon.starspace.link, port: 443, type: trojan, password: 4ZPDeqJ6g766UKDJ, sni: silicon.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-300.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-993.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 乌克兰-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-300.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-993.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 乌克兰-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-300.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-993.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 乌克兰-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-300.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-993.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 乌克兰-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-300.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-993.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 乌克兰-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-300.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-993.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 乌克兰-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-379.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-375.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-381.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-300.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-993.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 乌克兰-394.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
