--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇳🇱 荷兰-1.70MB/s(Youtube:不良林), server: 213.183.59.214, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇯🇵 日本-5.24MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.74MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.72MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 未知国家-1.48MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇸🇬 新加坡-1.40MB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-5.55MB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
+  - {name: 未知国家-1.45MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
   - {name: 🇯🇵 日本-6.28MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.69MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-328.0KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-330.3KB/s(Youtube:不良林), server: silicon.starspace.link, port: 443, type: trojan, password: 4ZPDeqJ6g766UKDJ, sni: silicon.starspace.link, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.55MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.55MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.55MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.55MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.55MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.55MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.74MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-5.55MB/s(Youtube:不良林)
+      - 未知国家-1.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.28MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-328.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-330.3KB/s(Youtube:不良林)
 rules:
